✨ added the option to write movie set artwork with movie set name to movie folder
fixes #2113